--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         </div>
       </div>
       <div class="col-md-8 pl-0" id="side-2">
-        <div id="chatPanel" class="card" style="display:none;">
-          <div class="card-header">
+        <div id="chatPanel" class="card chat-card mt-auto" style="display:none;">
+          <div class="card-header user-details">
             <div class="row">
               <div class="col-1 col-sm-1 col-md-1 col-lg-1 ">
                 <i class="fas fa-list mt-2" style="cursor:pointer;" onclick="showChatList()"></i>
@@ -99,18 +99,18 @@
               </div>
             </div>
           </div>
-          <div id="messages" class="card-body">
+          <div id="messages" class="card-body chat-body">
             
           </div>
-          <div class="card-footer">
-            <div class="row">
-              <div class="col-2 col-md-1">
+          <div class="card-footer text-input">
+            <div class="row mt-auto">
+              <div class="col-2 col-md-1 text-input-row">
                 <i class="far fa-grin fa-2x"></i>
               </div>
-              <div class="col-8 col-md-10">
+              <div class="col-8 col-md-10 text-input-row">
                 <input id="txtMessage" type="text" placeholder="Type here" class="form-control form-rounded" />
               </div>
-              <div class="col-2 col-md-1">
+              <div class="col-2 col-md-1 text-input-row">
                 <i class="fas fa-microphone fa-2x"></i>
               </div>
             </div>
