--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <i class="fas fa-arrow-left d-md-none" style="font-size:20px; cursor:pointer;" onclick="hideChatList()"></i>
              </div>
               <div class="col-9 col-sm-9 col-md-9">
-                <img id="imgProfile" src="img/user.svg" class="rounded-circle profile-pic"/>
+                <img id="imgProfile" src="user.svg" class="rounded-circle profile-pic"/>
               </div>
              <div class="col-2 col-sm-2 col-md-2">
                <div class="dropleft">
@@ -79,7 +79,7 @@
                 <i class="fas fa-list mt-2" style="cursor:pointer;" onclick="showChatList()"></i>
               </div>
               <div class="col-2 col-sm-2 col-md-2 col-lg-1">
-                <img id="imgChat" src="img/user.svg" class="rounded-circle profile-pic"/>
+                <img id="imgChat" src="user.svg" class="rounded-circle profile-pic"/>
               </div>
               <div class="col-5 col-sm-5 col-md-5 col-lg-7">
                  <div class="name" id="divChatName" >Any Name</div>
